# ChineseChessControl

./: .gitignore  .travis.yml  Authors.md  CMakeLists.txt  CMakeLists.txt.user.2723edb  ChangeLog.md  ChinesChessCtr.cpp  ChinesChessCtr.def  ChinesChessCtr.h  ChinesChessCtr.odl  ChinesChessCtr.rc  Doxyfile.in  EnumAndStructAndConst.h  GoRule.cpp  README.md  ReadMe.txt  XQCtl.cpp  XQCtl.h  XQPpg.cpp  XQPpg.h  appveyor.yml  build_debpackage.sh  common.cpp  common.h  deploy.sh  resource.h  tag.sh  vcpkg.json  中国象棋技术文档.htm  中国象棋控件.dsw  中国象棋控件.sln  中国象棋控件.vcproj
.github/: FUNDING.yml
App/MFC/ChineseChess/: CDChineseChessControl.cpp  CDChineseChessControl.h  CDChineseChessControlEvents.cpp  CDChineseChessControlEvents.h  CMakeLists.txt  Chess.cpp  Chess.h  ChineseChess.cpp  ChineseChess.h  ChineseChess.rc  ChineseChess.sln  ChineseChess.vcxproj  ChineseChessApp.cpp  ChineseChessDlg.cpp  ChineseChessDlg.h  README.md  ReadMe.txt  Resource.h  chess.cpp  chess.h  stdafx.cpp  stdafx.h
App/MFC/ChineseChess/res/: ChineseChess.rc2
App/MFC/ChineseChessMFC/: CMakeLists.txt  ChineseChessMFC.cpp  ChineseChessMFC.h  ChineseChessMFC.rc  ChineseChessMFCDlg.cpp  ChineseChessMFCDlg.h  Resource.h  stdafx.cpp  stdafx.h
App/MFC/ChineseChessMFC/res/: ChineseChessMFC.rc2
App/Qt/ChineseChess/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp
App/Qt/ChineseChess/Resource/: App.Info.plist  AppIcon.rc  Resource.qrc
App/Qt/ChineseChess/Resource/Image/: io.github.KangLin.ChineseChess.icns
App/Qt/ChineseChess/Resource/Translations/: ChineseChessApp_ar.ts  ChineseChessApp_ca.ts  ChineseChessApp_cs.ts  ChineseChessApp_da.ts  ChineseChessApp_de.ts  ChineseChessApp_el.ts  ChineseChessApp_en.ts  ChineseChessApp_en_GB.ts  ChineseChessApp_es.ts  ChineseChessApp_et.ts  ChineseChessApp_fi.ts  ChineseChessApp_fr.ts  ChineseChessApp_gd.ts  ChineseChessApp_gl.ts  ChineseChessApp_hu.ts  ChineseChessApp_it.ts  ChineseChessApp_ja.ts  ChineseChessApp_ko.ts  ChineseChessApp_nb.ts  ChineseChessApp_ne.ts  ChineseChessApp_nl.ts  ChineseChessApp_nn.ts  ChineseChessApp_oc.ts  ChineseChessApp_pl.ts  ChineseChessApp_pt_BR.ts  ChineseChessApp_pt_PT.ts  ChineseChessApp_ro.ts  ChineseChessApp_ru.ts  ChineseChessApp_sk.ts  ChineseChessApp_sl.ts  ChineseChessApp_sv.ts  ChineseChessApp_th.ts  ChineseChessApp_tr.ts  ChineseChessApp_uk.ts  ChineseChessApp_zh.ts  ChineseChessApp_zh_CN.ts  ChineseChessApp_zh_TW.ts  ChineseChessApp_zh_rCN.ts  ChineseChessApp_zh_rTW.ts
App/Qt/ChineseChess/android/: AndroidManifest.xml
App/Qt/ChineseChess/android/res/values-zh-rTW/: strings.xml
Documents/: BUG.html  (+6 more)
Src/: CMakeLists.txt  ChessGame.cpp  ChessGame.h  ChessSteps.cpp  ChessSteps.h  ChessStepsChinese.cpp  ChessStepsChinese.h  ChineseChess.cpp  ChineseChess.h  ChineseChessControl.cpp  ChineseChessControl.def  ChineseChessControl.dsp  ChineseChessControl.dsw  ChineseChessControl.h  ChineseChessControl.odl  ChineseChessControl.rc  ChineseChessControl.sln  ChineseChessControl.vcxproj  ChineseChessCtr.cpp  ChineseChessCtr.def  ChineseChessCtr.dsp  ChineseChessCtr.dsw  ChineseChessCtr.h  ChineseChessCtr.odl  ChineseChessCtr.rc  ChineseChessCtr.sln  ChineseChessCtr.vcxproj  Common.cpp  Common.h  EnumAndStructAndConst.h  Fen.cpp  Fen.h  GoRule.cpp  GoRule.h  Pgn.cpp  Pgn.h  Piece.cpp  Piece.h  README.md  StdAfx.cpp  (+5 more)
Src/ActiveX/: CMakeLists.txt  ChineseChessActiveX.cpp  ChineseChessActiveX.def  ChineseChessActiveX.h  ChineseChessActiveX.idl  ChineseChessActiveX.rc  ChineseChessActiveX.sln  ChineseChessActiveX.vcxproj  ChineseChessActiveXCtrl.cpp  ChineseChessActiveXCtrl.h  ChineseChessActiveXPropPage.cpp  ChineseChessActiveXPropPage.h  ChineseChessControl.cpp  ChineseChessControl.def  ChineseChessControl.h  ChineseChessControl.idl  ChineseChessControl.rc  ChineseChessControl.sln  ChineseChessControl.vcxproj  ChineseChessControlCtrl.cpp  ChineseChessControlCtrl.h  ChineseChessControlPropPage.cpp  ChineseChessControlPropPage.h  ChineseChessControlidl.h  README.md  Resource.h  framework.h  pch.h  stdafx.cpp  stdafx.h
Src/MFC/: CMakeLists.txt  ChineseChessControl.rc  ChineseChessView.cpp  ChineseChessView.def  ChineseChessView.h  ChineseChessView.rc  ChineseChessView.sln  ChineseChessView.vcxproj  README.md  Resource.h  dllmain.cpp  stdafx.cpp  stdafx.h
Src/Qt/: CMakeLists.txt  FrmChineseChess.cpp  FrmChineseChess.h  FrmChineseChessPlugin.cpp  FrmChineseChessPlugin.h  README.md  Resource.qrc  ResourceChineseChess.qrc  main.cpp
Src/Qt/Resource/Translations/: ChineseChessQt_zh.ts  ChineseChessQt_zh_CN.ts  ChineseChessQt_zh_TW.ts  ChineseChessQt_zh_rCN.ts  ChineseChessQt_zh_rTW.ts
Src/Res/Picture/: Picture.rar
UI/ActiveX/: CMakeLists.txt  ChineseChessActiveX.cpp  ChineseChessActiveX.h  ChineseChessActiveX.idl  ChineseChessActiveX.rc  ChineseChessActiveXCtrl.cpp  ChineseChessActiveXPropPage.cpp  ChineseChessActiveXPropPage.h  README.md  Resource.h
UI/MFC/: CMakeLists.txt  ChineseChessView.cpp  ChineseChessView.h  ChineseChessView.rc  README.md  Resource.h  dllmain.cpp  framework.h
UI/MFC/res/: ChineseChessView.rc2
UI/Qt/: CMakeLists.txt  FrmChineseChess.cpp  FrmChineseChess.h  FrmChineseChess.ui  FrmChineseChessPlugin.cpp  FrmChineseChessPlugin.h  README.md  ResourceChineseChess.qrc
UI/Qt/Resource/Translations/: ChineseChessQt_ar.ts  ChineseChessQt_ca.ts  ChineseChessQt_cs.ts  ChineseChessQt_da.ts  ChineseChessQt_de.ts  ChineseChessQt_el.ts  ChineseChessQt_en.ts  ChineseChessQt_en_GB.ts  ChineseChessQt_es.ts  ChineseChessQt_et.ts  ChineseChessQt_fi.ts  ChineseChessQt_fr.ts  ChineseChessQt_gd.ts  ChineseChessQt_gl.ts  ChineseChessQt_hu.ts  ChineseChessQt_it.ts  ChineseChessQt_ja.ts  ChineseChessQt_ko.ts  ChineseChessQt_nb.ts  ChineseChessQt_ne.ts  ChineseChessQt_nl.ts  ChineseChessQt_nn.ts  ChineseChessQt_oc.ts  ChineseChessQt_pl.ts  ChineseChessQt_pt_BR.ts  ChineseChessQt_pt_PT.ts  ChineseChessQt_ro.ts  ChineseChessQt_ru.ts  ChineseChessQt_sk.ts  ChineseChessQt_sl.ts  ChineseChessQt_sv.ts  ChineseChessQt_th.ts  ChineseChessQt_tr.ts  ChineseChessQt_uk.ts  ChineseChessQt_zh_CN.ts  ChineseChessQt_zh_TW.ts
(+378 files in other folders)
